--- a/app/views/pages/two.html.erb
+++ b/app/views/pages/two.html.erb
@@ -1,3 +1,5 @@
-<h1>Pages#two</h1>
-<p>Find me in app/views/pages/two.html.erb</p>
-<%= image_tag "pantallazo.png" %>
+<div class="container">
+    <h1>Pages#two</h1>
+    <p>Find me in app/views/pages/two.html.erb</p>
+    <%= image_tag("pantallazo.png") %>
+</div>
