--- a/app/views/pages/one.html.erb
+++ b/app/views/pages/one.html.erb
@@ -1,2 +1,3 @@
-<h1>Felipe Enrique Pérez Cisternas</h1>
-<p>Find me in app/views/pages/one.html.erb</p>
+<div class="container">
+    <h1>Felipe Enrique Pérez Cisternas</h1>
+</div>
