--- a/app/views/pages/three.html.erb
+++ b/app/views/pages/three.html.erb
@@ -1,2 +1,4 @@
-<h1>el care git</h1>
-<p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Voluptates, ad. Dolorem minima similique maiores dolorum ea repellat minus, culpa, itaque reprehenderit ipsum doloribus! Iste enim possimus expedita saepe sapiente corporis.</p>
+<div class="container">
+    <h1>el care git</h1>
+    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Voluptates, ad. Dolorem minima similique maiores dolorum ea repellat minus, culpa, itaque reprehenderit ipsum doloribus! Iste enim possimus expedita saepe sapiente corporis.</p>
+</div>
